# suchsolver

./: CMakeLists.txt  CMakeLists.txt.user.f3a7afd  Doxyfile  LICENSE  README.md  boundaryconditions.cpp  calculations.cpp  initialconditions.cpp  main.cpp  mesh.cpp
include/: calculations.h  constants.h  data.h  fluxes.h  initialconditions.h
includes/: boundaryconditions.h  postprocess.h
mesh/: constants.txt  initialconditions.txt  mesh.neu  optional.txt  solution.txt
src/: calculations.cpp  constants.cpp  data.cpp  fluxes.cpp  main.cpp  mesh.cpp  postprocess.cpp
src/include/: mesh.h
